Added Members controller and views.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -1,3 +1,8 @@
 en:
   forumby:
     title: 'Forumby'
+  members:
+    index:
+      heading: 'All Members'
+    show:
+      heading: 'Showing Member'
