Forums without a category can now be created.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -47,6 +47,7 @@ en:
     show:
       heading: 'Showing Forum'
     new:
+      heading: 'New Forum'
       form:
         submit: 'Create Forum'
     edit:
