Added topic and post visualization by member. Turned member information regarding topic and post counts into links to the member's topic and post list.

--- a/config/locales/en.yml
+++ b/config/locales/en.yml
@@ -25,11 +25,15 @@ en:
       heading: 'Showing Member'
 
     topics:
+      index:
+        heading: 'Topics by %{member}'
       count:
         one: '1 topic'
         other: '%{count} topics'
 
     posts:
+      index:
+        heading: 'Posts by %{member}'
       count:
         one: '1 post'
         other: '%{count} posts'
